--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "@amandaghassaei/event-dispatcher",
-  "private": true,
   "version": "1.0.3",
-  "description": "",
+  "description": "Parent class to support custom event listeners, written in typescript.",
   "main": "dist/event-dispatcher.js",
   "types": "dist/event-dispatcher.d.ts",
   "scripts": {
@@ -28,10 +27,8 @@
     "@rollup/plugin-terser": "^0.4.3",
     "@rollup/plugin-typescript": "^11.1.0",
     "@types/chai": "^4.3.4",
-    "@types/chai-almost": "^1.0.1",
     "@types/mocha": "^10.0.1",
     "chai": "^4.3.7",
-    "chai-almost": "^1.0.1",
     "coverage-badge-creator": "^1.0.17",
     "mocha": "^10.2.0",
     "nyc": "^15.1.0",
