--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "@amandaghassaei/event-dispatcher",
   "version": "1.0.3",
   "description": "Parent class to support custom event listeners, written in TypeScript.",
-  "main": "dist/event-dispatcher.js",
-  "types": "dist/event-dispatcher.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "keywords": [
     "event",
     "listener",
@@ -12,7 +12,7 @@
     "dispatch"
   ],
   "scripts": {
-    "build": "rollup --config && npm run docs && npm run make-coverage-badge",
+    "build": "tsc && npm run docs && npm run make-coverage-badge",
     "test": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r ts-node/register 'test/**/*.ts'",
     "test-with-coverage": "nyc env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r ts-node/register 'test/**/*.ts'",
     "make-coverage-badge": "nyc --reporter=json-summary env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r ts-node/register 'test/**/*.ts' && coverage-badge-creator",
@@ -29,21 +29,13 @@
     "src"
   ],
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^24.1.0",
-    "@rollup/plugin-node-resolve": "^15.0.2",
-    "@rollup/plugin-terser": "^0.4.3",
-    "@rollup/plugin-typescript": "^11.1.0",
     "@types/chai": "^4.3.4",
     "@types/mocha": "^10.0.1",
     "chai": "^4.3.7",
     "coverage-badge-creator": "^1.0.17",
     "mocha": "^10.2.0",
     "nyc": "^15.1.0",
-    "rollup": "^3.20.2",
-    "rollup-plugin-delete": "^2.0.0",
-    "rollup-plugin-dts": "^5.3.0",
     "ts-node": "^10.9.1",
-    "tslib": "^2.5.0",
     "typedoc": "^0.24.1",
     "typedoc-plugin-markdown": "^3.15.1",
     "typescript": "^5.0.4"
