--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Parent class to support custom event listeners, written in TypeScript.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "type": "module",
   "keywords": [
     "event",
     "listener",
@@ -13,9 +14,9 @@
   ],
   "scripts": {
     "build": "tsc && npm run docs && npm run make-coverage-badge",
-    "test": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r ts-node/register 'test/**/*.ts'",
-    "test-with-coverage": "nyc env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r ts-node/register 'test/**/*.ts'",
-    "make-coverage-badge": "nyc --reporter=json-summary env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r ts-node/register 'test/**/*.ts' && coverage-badge-creator",
+    "test": " mocha 'test/**/*.ts'",
+    "test-with-coverage": "c8 mocha 'test/**/*.ts'",
+    "make-coverage-badge": "c8 --reporter=json-summary mocha 'test/**/*.ts' && coverage-badge-creator",
     "docs": "typedoc --options ./typedoc.json"
   },
   "author": "Amanda Ghassaei",
@@ -31,10 +32,10 @@
   "devDependencies": {
     "@types/chai": "^4.3.4",
     "@types/mocha": "^10.0.1",
+    "c8": "^8.0.0",
     "chai": "^4.3.7",
     "coverage-badge-creator": "^1.0.17",
     "mocha": "^10.2.0",
-    "nyc": "^15.1.0",
     "ts-node": "^10.9.1",
     "typedoc": "^0.24.1",
     "typedoc-plugin-markdown": "^3.15.1",
