--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   ],
   "scripts": {
     "build": "tsc && npm run docs && npm run make-coverage-badge",
-    "test": " mocha 'test/**/*.ts'",
-    "test-with-coverage": "c8 mocha 'test/**/*.ts'",
-    "make-coverage-badge": "c8 --reporter=json-summary mocha 'test/**/*.ts' && coverage-badge-creator",
+    "test": "NODE_OPTIONS=--enable-source-maps mocha 'test/**/*.ts'",
+    "test-with-coverage": "NODE_OPTIONS=--enable-source-maps c8 mocha 'test/**/*.ts'",
+    "make-coverage-badge": "NODE_OPTIONS=--enable-source-maps c8 --reporter=json-summary mocha 'test/**/*.ts' && coverage-badge-creator",
     "docs": "typedoc --options ./typedoc.json"
   },
   "author": "Amanda Ghassaei",
